--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,32 +1,46 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title th:text="#{login.title}">Login</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-    <h1>Login</h1>
-    
-    <div th:if="${param.error}" style="color: red;">
-        Invalid username or password.
-    </div>
-    
-    <div th:if="${param.logout}" style="color: green;">
-        You have been logged out.
-    </div>
-    
-    <form th:action="@{/login}" method="post">
-        <div>
-            <label>Username:</label>
-            <input type="text" name="username" required autofocus>
+    <div class="container">
+        <h1 th:text="#{login.heading}">Login</h1>
+        
+        <!-- Success message from registration -->
+        <div th:if="${successMessage}" class="success-message">
+            <p th:text="${successMessage}">Success</p>
         </div>
         
-        <div>
-            <label>Password:</label>
-            <input type="password" name="password" required>
+        <div th:if="${param.error}" class="error-message">
+            <p th:text="#{login.error}">Invalid username or password.</p>
         </div>
         
-        <button type="submit">Sign In</button>
-    </form>
+        <div th:if="${param.logout}" class="success-message">
+            <p th:text="#{login.logout}">You have been logged out.</p>
+        </div>
+        
+        <form th:action="@{/login}" method="post">
+            <div class="form-group">
+                <label for="username" th:text="#{login.username}">Username</label>
+                <input type="text" id="username" name="username" required autofocus>
+            </div>
+            
+            <div class="form-group">
+                <label for="password" th:text="#{login.password}">Password</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            
+            <button type="submit" th:text="#{login.submit}">Sign In</button>
+        </form>
+        
+        <p class="register-link">
+            <span th:text="#{login.no.account}">Don't have an account?</span>
+            <a th:href="@{/register}" th:text="#{login.register.link}">Register here</a>
+        </p>
+    </div>
 </body>
 </html>
