--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-    <div class="container error-page">
+    <div class="container error-container">
         <div class="error-icon">
             <span th:text="${errorCode}" class="error-code">500</span>
         </div>
